Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o r18021 fixed wrong subId coming from Master's returnQos in cluster environment to the original client's subId

 o r18015 Fixed StringPairTokenizer#parseLine:
          if token contains separator and was escaped by apostroph: The first apostroph was sometimes not removed
          Increased performance by using StringBuilder.setLength(0) instead of creating a new instance

 o r18013 Fixed reconnect race condition with socket protocol
          Example for mobile phones: When network goes down (e.g. in a tunnel) and phone reconnects therafter
          the cleanup of the old,stale connection was 5 sec delayed and the POLLING event came too late for DropOnPolling plugin

Changes for 2.1.0 [2011-10-12] r18009 (JDK >= 1.5 only)
=======================================================

 o r18011 Allowed the change of size for the msgUnitStore in JMX (was not working due to inhability to find the topic name)

 o R18010 Changed the logic when starting and comparing the queue sizes (now it only allows bigger queues in xmlBlaster.properties)

 o r18007 C++: Renamed Timeout.h to Timeout.hpp to avoid name clash with C variant
          C++: Ported to xerces 3.0 (xerces 2.x still works fine) 

 o r18003 Removed deprecated jdbc tests

 o r17998-18000 charset encoding for byte[] content harmonized, see Constants.toUtf8Bytes et al
          XpathFilter ported to byte[] handling to be charset neutral

 o r17990 r17991 Low level performance tweaks (StringBuilder, TimeoutPooled#refreshTimeoutListener

 o r17985 STOMP and IOR (Corba) protocol are disabled as default setting (see config/xmlBlasterPlugins.xml.template)

 o r17979 Ported DispatchManager to I_DispatchManager and ServerDispatchManager and ClientDispatchManager. On Server side putPost has an
          check for inAliveTransition. 